--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@
 # By default, this is "localhost:12104", which means all URLs of the service
 # will point the machine of the user. If you want to want to reach this tool
 # from another machine, you should modify this.
-PODIMO_HOSTNAME="localhost:12104"
+PODIMO_HOSTNAME="10.0.0.23:12104"
 
 # PODIMO_BIND_HOST defines the IP and port on which the service will
 # listen for incoming requests. By default, this is "127.0.0.1:12104",
