--- a/.env.example
+++ b/.env.example
@@ -52,8 +52,8 @@ PODIMO_BIND_HOST="10.0.0.23:12104"
 #LOCAL_CREDENTIALS=false
 
 #Insert Podimo email and password here if using local credentials.
-#PODIMO_EMAIL="mijn_adres@email.com"
-#PODIMO_PASSWORD="1234"
+#PODIMO_EMAIL="bentj1976@gmail.com"
+#PODIMO_PASSWORD="bent1976"
 
 
 ###########
@@ -70,7 +70,7 @@ PODIMO_BIND_HOST="10.0.0.23:12104"
 #
 # 1. A generic HTTP proxy that forwards your requests through an
 # intermediary server.
-#HTTP_PROXY="http://localhost"
+#HTTP_PROXY="http://10.0.0.23"
 #
 # 2. Bypass the blockage through Zenrows (see https://www.zenrows.com/).
 # If you choose this option, enter your API key below
