--- a/.env.example
+++ b/.env.example
@@ -70,7 +70,7 @@ PODIMO_BIND_HOST="10.0.0.23:12104"
 #
 # 1. A generic HTTP proxy that forwards your requests through an
 # intermediary server.
-#HTTP_PROXY="http://10.0.0.23"
+#HTTP_PROXY="http://localhost"
 #
 # 2. Bypass the blockage through Zenrows (see https://www.zenrows.com/).
 # If you choose this option, enter your API key below
